added report page

--- a/frontend/pages/styles.css
+++ b/frontend/pages/styles.css
@@ -124,6 +124,7 @@
     font-weight: bold;
     color:white;
     margin-top: 50px;
+    text-align: center;
 }
 .activity-unit{
 
@@ -186,4 +187,10 @@
     margin-top:-7px;
     margin-left: -5px;
     max-width: 90%;
+}
+
+
+/* Report */
+.report-subtitle{
+    
 }
