fixed styling bugs

--- a/frontend/pages/styles.css
+++ b/frontend/pages/styles.css
@@ -1,3 +1,7 @@
+/* input colour */
+.css-1ptx2yq-MuiInputBase-root-MuiInput-root:after, .css-19mk8g1-MuiInputBase-root-MuiFilledInput-root:after {
+    border-bottom: 2px solid #00c853;
+  }
 /* Cards */
 .card-primary{
     background-color: rgb(236, 247, 236);
